[gd_scene load_steps=2 format=3 uid="uid://tgwiokob1t1j"]

[ext_resource type="Script" path="res://addons/Mushroom/DialogManager/Editor/Commands/SetVarControl.gd" id="1"]

[node name="VBoxContainer" type="VBoxContainer" node_paths=PackedStringArray("var_node_lineedit", "var_name_lineedit", "var_val_lineedit")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -520.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")
var_node_lineedit = NodePath("VarNodeHBoxContainer/VarNodeLineEdit")
var_name_lineedit = NodePath("VarNameHBoxContainer/VarNameLineEdit")
var_val_lineedit = NodePath("SetValHBoxContainer/SetValLineEdit")

[node name="VarNodeHBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="VarNodeLabel" type="Label" parent="VarNodeHBoxContainer"]
layout_mode = 2
text = "Variable Node: "

[node name="VarNodeLineEdit" type="LineEdit" parent="VarNodeHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VarNameHBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="VarNameLabel" type="Label" parent="VarNameHBoxContainer"]
layout_mode = 2
text = "Variable Name: "

[node name="VarNameLineEdit" type="LineEdit" parent="VarNameHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SetValHBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="SetValLabel" type="Label" parent="SetValHBoxContainer"]
layout_mode = 2
text = "New Valua: "

[node name="SetValLineEdit" type="LineEdit" parent="SetValHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="text_changed" from="VarNodeHBoxContainer/VarNodeLineEdit" to="." method="_on_var_node_line_edit_text_changed"]
[connection signal="text_changed" from="VarNameHBoxContainer/VarNameLineEdit" to="." method="_on_var_name_line_edit_text_changed"]
[connection signal="text_changed" from="SetValHBoxContainer/SetValLineEdit" to="." method="_on_set_val_line_edit_text_changed"]
